# dcmri

./: .buildinfo  .gitignore  CNAME  MANIFEST.in  README.md  README.rst  genindex.html  index.html  mods_tissue_pixel.pkl  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html  sop_maintenance.txt  sops.txt
.github/workflows/: documentation.yaml  poetry-build.yml  prerelease.yaml  publish-to-test-pypi.yml  pytest-actions.yaml  release.yaml
_downloads/042588cd22188c2ca6a60023b214abdf/: plot_gfr_validation.ipynb
_downloads/0a9961bb490d5c70fe318157b54ab80d/: dcmri-aif_tristan_rat-1.py
_downloads/0c88a68ebf711d278a3c4f778705ff2a/: plot_minipig.py
_downloads/0d415d51ecf5de8c3c698748f90b7cc4/: plot_tristan_volunteers_2scan.ipynb
_downloads/0f4cc6e0280249aeb0f7bdb34e95959e/: dcmri-fetch-1.py
_downloads/10ea57b05ef081fc2b5c661e1c555b0e/: plot_tristan_repro.ipynb
_downloads/129ade20b551543ee872d1b61bb30af4/: dcmri-AortaKidneys-1.py
_downloads/167dbf47bde96625aa95fc4286d3132f/: plot_gfr_validation.py
_downloads/1caa95f76245af0a2d1927f62214dd11/: dcmri-Tissue-1.py
_downloads/1de145406f5b044249c6095bb709d214/: dcmri-Mz_tissue-1.py
_downloads/265c4e3a5932f58c50e1f0046c12e274/: dcmri-flux_aorta-1.py
_downloads/27a4e5a097f32be7aca4ded50d3df74f/: dcmri-KidneyCortMed-1.py
_downloads/2bbd3b07bc8afc9b97884042ae92890a/: dcmri-conc_kidney-1.py
_downloads/2c47e85d5489fb8af4532194197308ec/: dcmri-conc_kidney_cm-1.py
_downloads/2c669491d21c5e61a82cf4a43e4b8a3c/: plot_tristan_patients.ipynb
_downloads/31a557058305cb960265eecc4ab478cd/: dcmri-Liver-1.py
_downloads/323b04cb11e639582b13b97547a80498/: dcmri-fetch-1.py
_downloads/41ba7786ad9869308b30bf1e98f3c012/: dcmri-AortaPortalLiver-1.py
_downloads/4b5264936157a0179f66c4dc808fe172/: plot_tristan6drugs.ipynb
_downloads/4e0f2382efc0c853a7172523f446345e/: dcmri-shepp_logan-1.py
_downloads/5327a8718b49eb6d905a4a76549a8f9b/: dcmri-AortaLiver-1.py
_downloads/53ff5f5a69233b1b13362172a0e5bab7/: dcmri-AortaLiver2scan-1.py
_downloads/54a0817f89a7cf013c0e02f653a117ac/: dcmri-Kidney-1.py
_downloads/552ed5724c9bdbb653aa6b2be0875771/: dcmri-Mz_ss-1.py
_downloads/5948f577722ab9750d930d4bab43f84e/: dcmri-conc_tissue-1.py
_downloads/5dee8cffb386143ec3f94a1c7d520fd9/: dcmri-Mz_free-1.py
_downloads/70bf52fbad2b05fb2bb4dceda800fae2/: dcmri-TissueArray-1.py
_downloads/71e18fab0840f074e9c903409218af1f/: dcmri-conc_liver-1.py
_downloads/71f9bb46a05e1e5c7dd18a264c861ed8/: plot_convolution.ipynb
_downloads/73b4cb78a6388bc38fd646650242d5a5/: dcmri-signal_tissue-1.py
_downloads/8ab35ea1f320a9824f42c02aa2764aa1/: dcmri-Aorta-1.py
_downloads/8ec84aec3d5db847458bbae276a4cc16/: dcmri-AortaKidneys-1.py
_downloads/910d7ece4458252cd7538d612bc695aa/: dcmri-conc_src-1.py
_downloads/94605ab8cf85f795938850446f0e29bf/: dcmri-shepp_logan-2.py
_downloads/9671b1dd613e1d12e311dadf3e68f800/: dcmri-Mz_spgr-1.py
_downloads/97e60759bdd736fc5e8e846f7195c6be/: dcmri-relax_tissue-1.py
_downloads/a4a1718d348c20c375372b0c55b3bf26/: dcmri-Aorta-1.py
_downloads/aa4a901201f51465b99757d579b9869d/: dcmri-Tissue-3.py
_downloads/aa4cd1b371bc24375bb3720c3729886f/: dcmri-conc_kidney_cortex_medulla-1.py
_downloads/ad1ffd9d312139f3e36b6abcb78969e7/: dcmri-shepp_logan-3.py
_downloads/b19c8be8358dc1b46b1ba030661a3db7/: dcmri-Tissue-1.py
_modules/: index.html
_modules/dcmri/: data.html  (+19 more)
_sources/: index.rst.txt  sg_execution_times.rst.txt
_static/: custom.css
about/: index.html
api/: dcmri.Aorta.html  dcmri.AortaKidneys.html  dcmri.AortaLiver.html  dcmri.AortaLiver2scan.html  dcmri.AortaPortalLiver.html  dcmri.Kidney.html  dcmri.KidneyCortMed.html  dcmri.Liver.html  dcmri.Mz_free.html  dcmri.Mz_spgr.html  dcmri.Mz_ss.html  dcmri.Mz_tissue.html  dcmri.PD.html  dcmri.T1.html  dcmri.T2.html  dcmri.Tissue.html  dcmri.TissueArray.html  dcmri.add_noise.html  dcmri.aif_parker.html  dcmri.aif_tristan.html  dcmri.aif_tristan_rat.html  dcmri.biexpconv.html  dcmri.ca_conc.html  dcmri.ca_injection.html  dcmri.ca_std_dose.html  dcmri.conc.html  dcmri.conc_2cxm.html  dcmri.conc_chain.html  dcmri.conc_comp.html  dcmri.conc_free.html  dcmri.conc_kidney.html  dcmri.conc_kidney_cm.html  dcmri.conc_lin.html  dcmri.conc_liver.html  dcmri.conc_mmcomp.html  dcmri.conc_ncomp.html  dcmri.conc_nscomp.html  dcmri.conc_pass.html  dcmri.conc_plug.html  dcmri.conc_src.html  (+62 more)
archive/: .gitignore  README.md
contribute/: index.html
dev/: diagrams.pptx  requirements.txt  sops.txt
docs/: requirements.txt
examples/: index.html  sg_execution_times.html
reference/: e2e.html  index.html  pk_blocks.html  relaxation.html  sig.html  tissues.html  utils.html
releases/: index.html  release_0.6.1.html  release_0.6.10.html  release_0.6.11.html  release_0.6.12.html  release_0.6.13.html  release_0.6.14.html  release_0.6.15.html  release_0.6.16.html  release_0.6.17.html  release_0.6.2.html  release_0.6.3.html  release_0.6.4.html  release_0.6.5.html  release_0.6.6.html  release_0.6.7.html  release_0.6.8.html  release_0.6.9.html
src/: datakidney.py  dataliver.py  dcmri.py  mainkidney.py  mainliver.py  modelskidney.py
tests/: debug.py  requirements.txt  test_aif.py  test_data.py  test_dcmri.py  test_e2e.py  test_fake.py  test_inj.py  test_inv.py  test_kidney.py  test_lib.py  test_mods.py  test_pk.py  test_pk_aorta.py  test_pk_inv.py  test_pk_lib.py  test_pk_tissue.py  test_pkmods.py  test_rel.py  test_relax.py  test_sbi.py  test_sig.py  test_tissue.py  test_tools.py  test_ui.py  test_ui_aorta.py  test_ui_artery_tissue.py  test_ui_kidney.py  test_ui_liver.py  test_ui_tissue.py  test_ui_tissue_ls.py  test_utils.py
user_guide/: getting_started.html  index.html  units.html  usage.html
(+454 files in other folders)
