# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "dcmri"
version = "0.6.10"
dependencies = [
  'importlib-resources>=1.1.0',
  'tqdm',
  'numpy',
  'scipy',
  'matplotlib',
]
# optional information
description = "A python toolbox for dynamic contrast MRI"
readme = "README.rst"
authors = [
  { name = "Steven Sourbron", email = "s.sourbron@sheffield.ac.uk" },
  { name = "Ebony Gunwhy", email = "e.gunwhy@sheffield.ac.uk" },
  { name = "Eve Shalom", email = "E.S.Shalom@sheffield.ac.uk" },
]
# license = "Apache-2.0" # This creates a problem for pip install somehow
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 3 - Alpha',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Operating System :: OS Independent',

  'License :: OSI Approved :: Apache Software License',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
keywords = [
  'python', 
  "medical imaging", 
  "perfusion", 
  "MRI",
]
requires-python = ">=3.10"


[project.urls]
"Homepage" = "https://dcmri.org"
"Source Code" = 'https://github.com/dcmri/dcmri'

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

# [project.optional-dependencies]
# dev = [
#   'changelist==0.4',
# ]
# test = [
#   "pytest",
#   "pytest-cov",
# ]
# docs = [
#   "sphinx",
#   "matplotlib",
#   "autodocsumm",
#   "docutils",
#   "myst-parser",
#   "pydata-sphinx-theme",
#   "sphinx-copybutton",
#   "sphinx-design",
#   "sphinxcontrib-applehelp",
#   "sphinxcontrib-devhelp",
#   "sphinxcontrib-htmlhelp",
#   "sphinxcontrib-jsmath",
#   "sphinxcontrib-qthelp",
#   "sphinxcontrib-serializinghtml",
#   "sphinx-gallery",
# ]